# ogre-hello

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  main.cpp
